# HyvesDesktop

./: CMakeLists.txt  HyvesDesktop.qrc  HyvesDesktop.rc.in  HyvesDesktop_nl.qm  HyvesDesktop_nl.ts  INSTALL  LICENSE  README.md  hyves_macros.h  hyves_macros.h.cmake  kwekker-osx.qtdir  kwekker-ubuntu.qtdir
cmake/modules/: KDE4Macros.cmake  NSIS.template.in  RelocateOSXLibrary.cmake
crashreporter/: CMakeLists.txt  CrashReporter.cpp  CrashReporter.h  CrashReporter.qrc  CrashReporter.ui  Restarter.cpp  Restarter.h  config.h  config.h.in  main.cpp
data/bundle/images/buttons/: .directory
data/bundle/precompiled/: amazon.js  chatTemplates_en_GB.js  chatTemplates_nl_NL.js  error_successTemplate_en_GB.js  error_successTemplate_nl_NL.js  fancy_layout.js  footer.js  headerTemplates_en_GB.js  headerTemplates_nl_NL.js  init.js  misc.js  rteTemplates_en_GB.js  rteTemplates_nl_NL.js
data/bundle/precompiled/jsc/: fancy_layout.js  header.js  prototype.js
data/bundle/statics/: EventHandler.js  LocationHistoryUtil.js  browserdetection.js  dateformat.js  fastinit.js  header.js  hyves_stir.htm  json.js  layout_820.css  logging.js  mediaLocator.js  mobilestyle_desktop.css  number-functions.js  pager.js  scriptaculous_core_extensions.js  simpledateformat.js  style20.css  template.js  template_wrapper.js
data/bundle/statics/controls/: RTE_Mediapicker.js  RTE_Memberpicker.js  RTE_Smileypicker.js  RichTextEditor.js
data/bundle/statics/hyvesdesktop/: translator.js
data/bundle/statics/hyvesense/: hyvesense2.js
data/bundle/statics/intro/: intro1.html  intro2.html  landingpagecounter.js
data/bundle/statics/kwekker2/: buzz.css  buzz.js  buzzer.js  client.css  client.js  container.js  history.html  history.js  invite.html  invite.js  log4javascript.js  roster.js  session.html  session.js  shared.js  tooltip.html  ui.js  wwwDialog.html  wwwDialog.js
data/bundle/statics/log4javascript-1.2/: changelog.txt  log4javascript.js  main.css
data/bundle/statics/reaction/: reactions.js
distribution/: CMakeLists.txt  LICENSE.txt  package-source-tgz.cpack.in  terms_of_use.txt  updates.xml
distribution/bitrock/: hyvesdesktop-win32.xml  hyvesdesktop.xml  hyvesdesktop_en.lng  hyvesdesktop_nl.lng
distribution/osx/: CMakeLists.txt  Gebruiksvoorwaarden.rtf  README  Terms of Use ENG.rtf  kwekker.icns  volume.icns
distribution/osx/bundle/: CMakeLists.txt  Info.plist.in  bundle.sh.in  volume_logo.xcf
distribution/osx/packagemaker/: CMakeLists.txt  package-binary-packagemaker.cpack.in  readme.txt  welcome.txt
distribution/posix/: CMakeLists.txt  HyvesDesktop.sh
distribution/win32/: CMakeLists.txt
docs/: Hyves Desktop Architecture.flw
plugins/kwekker/: CMakeLists.txt  manifest.xml
plugins/kwekker/src/: CMakeLists.txt  GeneralSettingsPage.ui  Kwekker.cpp  Kwekker.h  Kwekker.qrc  MainWindow.cpp  MainWindow.h  MainWindow.ui  NotificationsSettingsPage.ui  SettingsDialog.cpp  SettingsDialog.h  Strings.cpp
src/: AboutDialog.cpp  AboutDialog.h  Avatar.cpp  Avatar.h  CMakeLists.txt  CookieJar.cpp  CookieJar.h  CrashHandler.cpp  CrashHandler.h  DiskCache.cpp  DiskCache.h  HyvesDesktopApplication.cpp  HyvesDesktopApplication.h  LoadingWidget.cpp  LoadingWidget.h  LoginItemsAE.c  LoginItemsAE.h  NetworkAccessManager.cpp  NetworkAccessManager.h  NetworkReply.cpp  NetworkReply.h  Strings.cpp  UrlFetcher.cpp  UrlFetcher.h  Util.cpp  Util.h  Version.cpp  Version.h  WebPage.cpp  WebPage.h  WebPluginFactory.cpp  WebPluginFactory.h  WebView.cpp  WebView.h  WideSplitter.cpp  WideSplitter.h  config.h  config.h.in  hyveslib_export.h  main.cpp
src/contextmenumanager/: ContextMenuManager.cpp  ContextMenuManager.h
src/extender/: Environment.cpp  Environment.h  Extender.cpp  Extender.h  JSSlotWrapper.cpp  JSSlotWrapper.h  MetaTypes.cpp  MetaTypes.h
src/filer/: Filer.cpp  Filer.h
src/historykeeper/: HistoryKeeper.cpp  HistoryKeeper.h
src/hyvesapi/: HyvesAPI.cpp  HyvesAPI.h
src/informer/: Informer.cpp  Informer.h
src/jabber/: DelayedJabberMessage.cpp  DelayedJabberMessage.h  Jabber.cpp  Jabber.h  JabberMock.cpp  JabberMock.h
src/logger/: JSLogger.cpp  JSLogger.h  Logger.cpp  Logger.h  UsageStatsUploader.cpp  UsageStatsUploader.h
src/mediacache/: MediaCache.cpp  MediaCache.h  NetworkReply.cpp  NetworkReply.h
src/player/: Player.cpp  Player.h
src/plugger/: CXXPluginInterface.h  CXXPluginLoader.cpp  CXXPluginLoader.h  Plugger.cpp  Plugger.h  PluginFile.h  PluginInfo.cpp  PluginInfo.h  PluginLoader.cpp  PluginLoader.h  PluginMap.h
src/richtext/: Label.cpp  Label.h  TextBrowser.cpp  TextBrowser.h  TextDocument.cpp  TextDocument.h  TextEdit.cpp  TextEdit.h
src/roster/: Roster.cpp  Roster.h  RosterItem.cpp  RosterItem.h
src/settingsmanager/: SettingsManager.cpp  SettingsManager.h
src/systemspy/: SimpleConnectionChecker.cpp  SimpleConnectionChecker.h  SystemSpy.cpp  SystemSpy.h  SystemSpyOsx.cpp  SystemSpyOsx.h  SystemSpyUnix.cpp  SystemSpyUnix.h  SystemSpyWin.cpp  SystemSpyWin.h
src/systemtrayicon/: SystemTrayIcon.cpp  SystemTrayIcon.h
src/tester/: Tester.cpp  Tester.h  Tester.js
src/tests/: BuzzTest.js  CMakeLists.txt  ExtenderTest.cpp  ExtenderTest.h  HistoryTest.js  InitializationTest.js  JabberTest.cpp  JabberTest.h  LoginTest.js  LogoutTest.js  MUCSessionTest.js  NewSessionTest.js  PingTest.js  ReceiptConfirmationTest.js  RosterTest.cpp  RosterTest.h  RosterTest.js  SearchBarTest.js  UnifiedMessagingTest.js  UpdaterTest.cpp  UpdaterTest.h  UrlFetcherTest.cpp  UrlFetcherTest.h  UtilTest.cpp  UtilTest.h  VersionTest.cpp  VersionTest.h  WwwDialogTest.js
src/tooltipper/: ContactToolTip.cpp  ContactToolTip.h  ToolTipper.cpp  ToolTipper.h
src/translator/: Translator.cpp  Translator.h
src/updater/: README.txt  Updater.cpp  Updater.h
src/windowmanager/: GrowlNotifier.cpp  GrowlNotifier.h  MainWindowBase.cpp  MainWindowBase.h  ScriptWindow.cpp  ScriptWindow.h  SliderWindow.cpp  SliderWindow.h  WindowBase.cpp  WindowBase.h  WindowInfo.cpp  WindowInfo.h  WindowManager.cpp  WindowManager.h
src/zipper/: ZipCache.cpp  ZipCache.h  Zipper.cpp  Zipper.h
(+6 files in other folders)
